Revert "Duomenu aibes pakeitimai (#20)"
This reverts commit 5f9896ce204837a59172f2a7d57eed15a130a648.

--- a/AprasomojiStatistikaNr2.ipynb
+++ b/AprasomojiStatistikaNr2.ipynb
@@ -3,40 +3,36 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-28T19:33:05.271028Z",
-     "start_time": "2025-09-28T19:33:04.879277Z"
+     "end_time": "2025-09-22T14:58:33.518354Z",
+     "start_time": "2025-09-22T14:58:33.508065Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "all_data_ = pd.read_csv(\"final_clean_data/final_clean_all_data.csv\")\n",
-    "label_0_ = pd.read_csv(\"final_clean_data/final_label_0.csv\")\n",
-    "label_1_ = pd.read_csv(\"final_clean_data/final_label_1.csv\")\n",
-    "label_2_ = pd.read_csv(\"final_clean_data/final_label_2.csv\")\n",
-    "all_data = all_data_.drop(columns = \"is_outlier\")\n",
-    "label_0 = label_0_.drop(columns = \"is_outlier\")\n",
-    "label_1 = label_1_.drop(columns = \"is_outlier\")\n",
-    "label_2 = label_2_.drop(columns = \"is_outlier\")\n"
+    "\n",
+    "label_0 = pd.read_csv(\"csv/clean_data_by_label/label_0.csv\")\n",
+    "label_1 = pd.read_csv(\"csv/clean_data_by_label/label_1.csv\")\n",
+    "label_2 = pd.read_csv(\"csv/clean_data_by_label/label_2.csv\")"
    ],
    "id": "d4b084f36916abe1",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-28T19:33:56.840623Z",
-     "start_time": "2025-09-28T19:33:56.829588Z"
+     "end_time": "2025-09-22T14:58:36.700580Z",
+     "start_time": "2025-09-22T14:58:36.689251Z"
     }
    },
    "cell_type": "code",
    "source": [
     "stats_list = []\n",
     "\n",
-    "for col in all_data.columns:\n",
-    "    x = all_data[col]\n",
+    "for col in label_0.columns:\n",
+    "    x = label_0[col]\n",
     "    stats = {\n",
     "        \"Variable\": col,\n",
     "        \"Minimumas\": np.nanmin(x),\n",
@@ -56,20 +52,20 @@
    ],
    "id": "732e143e0add9443",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-28T19:33:57.972097Z",
-     "start_time": "2025-09-28T19:33:57.967686Z"
+     "end_time": "2025-09-22T14:58:40.067532Z",
+     "start_time": "2025-09-22T14:58:40.062954Z"
     }
    },
    "cell_type": "code",
-   "source": "stats_df.to_csv(\"sutvarkytu_duomenu_aprasomoji_statistika/sutvarkytu_duomenu_aprasomoji_statistika_all_data.csv\", index = False)",
+   "source": "stats_df.to_csv(\"sutvarkytu_duomenu_aprasomoji_statistika/sutvarkytu_duomenu_aprasomoji_statistika_label_0.csv\", index = False)",
    "id": "290aad31f36ef538",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 14
   }
  ],
  "metadata": {
