duomenu aibes normavimas pritaikant min-max metoda

--- a/AS_palyginimas.ipynb
+++ b/AS_palyginimas.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-09-22T16:37:39.870167Z",
-     "start_time": "2025-09-22T16:37:39.850409Z"
+     "end_time": "2025-10-02T06:25:46.412850Z",
+     "start_time": "2025-10-02T06:25:46.401142Z"
     }
    },
    "source": [
@@ -33,146 +33,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Liveta\\AppData\\Local\\Temp\\ipykernel_12676\\2697236123.py:10: SettingWithCopyWarning: \n",
+      "/var/folders/8m/2mjbvkv91xx273zl_4n42rsr0000gn/T/ipykernel_21752/822778304.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data_first_0.drop(columns=columns_to_drop, inplace=True)\n",
-      "C:\\Users\\Liveta\\AppData\\Local\\Temp\\ipykernel_12676\\2697236123.py:11: SettingWithCopyWarning: \n",
+      "/var/folders/8m/2mjbvkv91xx273zl_4n42rsr0000gn/T/ipykernel_21752/822778304.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data_first_1.drop(columns=columns_to_drop, inplace=True)\n",
-      "C:\\Users\\Liveta\\AppData\\Local\\Temp\\ipykernel_12676\\2697236123.py:12: SettingWithCopyWarning: \n",
+      "/var/folders/8m/2mjbvkv91xx273zl_4n42rsr0000gn/T/ipykernel_21752/822778304.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data_first_2.drop(columns=columns_to_drop, inplace=True)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "        Variable  Minimumas   Q1.25.   Mediana  Vidurkis    Q3.75.  \\\n",
-       "0     signal_std     0.1368   0.2404    0.2670    0.3047    0.3595   \n",
-       "1        wl_side    73.0000  99.0000  112.0000  110.4960  121.0000   \n",
-       "2          R_val     0.6784   1.1894    1.6051    1.5711    1.8650   \n",
-       "3  RR_r_0/RR_r_1     0.2873   0.9722    1.0000    0.9927    1.0250   \n",
-       "4          P_val    -0.6616  -0.2563   -0.1778   -0.0969   -0.0623   \n",
-       "5          Q_val    -0.9827  -0.5364   -0.4612   -0.4284   -0.3003   \n",
-       "\n",
-       "   Maksimumas  Dispersija  \n",
-       "0      0.8259      0.0171  \n",
-       "1    172.0000    351.4248  \n",
-       "2      2.9692      0.2078  \n",
-       "3      2.1515      0.0295  \n",
-       "4      2.2769      0.1241  \n",
-       "5      0.0909      0.0264  "
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Variable</th>\n",
-       "      <th>Minimumas</th>\n",
-       "      <th>Q1.25.</th>\n",
-       "      <th>Mediana</th>\n",
-       "      <th>Vidurkis</th>\n",
-       "      <th>Q3.75.</th>\n",
-       "      <th>Maksimumas</th>\n",
-       "      <th>Dispersija</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>signal_std</td>\n",
-       "      <td>0.1368</td>\n",
-       "      <td>0.2404</td>\n",
-       "      <td>0.2670</td>\n",
-       "      <td>0.3047</td>\n",
-       "      <td>0.3595</td>\n",
-       "      <td>0.8259</td>\n",
-       "      <td>0.0171</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>wl_side</td>\n",
-       "      <td>73.0000</td>\n",
-       "      <td>99.0000</td>\n",
-       "      <td>112.0000</td>\n",
-       "      <td>110.4960</td>\n",
-       "      <td>121.0000</td>\n",
-       "      <td>172.0000</td>\n",
-       "      <td>351.4248</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>R_val</td>\n",
-       "      <td>0.6784</td>\n",
-       "      <td>1.1894</td>\n",
-       "      <td>1.6051</td>\n",
-       "      <td>1.5711</td>\n",
-       "      <td>1.8650</td>\n",
-       "      <td>2.9692</td>\n",
-       "      <td>0.2078</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>RR_r_0/RR_r_1</td>\n",
-       "      <td>0.2873</td>\n",
-       "      <td>0.9722</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>0.9927</td>\n",
-       "      <td>1.0250</td>\n",
-       "      <td>2.1515</td>\n",
-       "      <td>0.0295</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>P_val</td>\n",
-       "      <td>-0.6616</td>\n",
-       "      <td>-0.2563</td>\n",
-       "      <td>-0.1778</td>\n",
-       "      <td>-0.0969</td>\n",
-       "      <td>-0.0623</td>\n",
-       "      <td>2.2769</td>\n",
-       "      <td>0.1241</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Q_val</td>\n",
-       "      <td>-0.9827</td>\n",
-       "      <td>-0.5364</td>\n",
-       "      <td>-0.4612</td>\n",
-       "      <td>-0.4284</td>\n",
-       "      <td>-0.3003</td>\n",
-       "      <td>0.0909</td>\n",
-       "      <td>0.0264</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "execution_count": 2
@@ -180,8 +56,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-22T15:40:30.809350Z",
-     "start_time": "2025-09-22T15:40:30.798083Z"
+     "end_time": "2025-10-02T06:25:49.641525Z",
+     "start_time": "2025-10-02T06:25:49.632958Z"
     }
    },
    "cell_type": "code",
@@ -201,13 +77,13 @@
    ],
    "id": "9355fca20cf71206",
    "outputs": [],
-   "execution_count": 25
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-22T15:40:31.878149Z",
-     "start_time": "2025-09-22T15:40:31.867541Z"
+     "end_time": "2025-10-02T06:25:57.079286Z",
+     "start_time": "2025-10-02T06:25:57.068919Z"
     }
    },
    "cell_type": "code",
@@ -218,18 +94,18 @@
      "data": {
       "text/plain": [
        "        Variable  Minimumas      Q1  Mediana  Vidurkis      Q3  Maksimumas  \\\n",
-       "0     signal_std     0.1368  0.2366   0.2621    0.2836  0.2921      0.6743   \n",
-       "2          R_val     0.6784  1.1742   1.5778    1.5221  1.8157      2.6455   \n",
-       "3  RR_r_0/RR_r_1     0.8250  0.9750   1.0000    0.9990  1.0248      1.1474   \n",
-       "4          P_val    -0.6616 -0.2604  -0.1857   -0.1544 -0.0789      0.5061   \n",
-       "5          Q_val    -0.8908 -0.5358  -0.4695   -0.4295 -0.3042      0.0909   \n",
+       "0     signal_std     0.1368  0.2404   0.2670    0.3048  0.3601      0.8259   \n",
+       "2          R_val     0.6784  1.1894   1.6027    1.5701  1.8645      2.9692   \n",
+       "3  RR_r_0/RR_r_1     0.2873  0.9722   1.0000    0.9927  1.0250      2.1515   \n",
+       "4          P_val    -0.6616 -0.2573  -0.1778   -0.0965 -0.0617      2.2769   \n",
+       "5          Q_val    -0.9827 -0.5362  -0.4612   -0.4282 -0.2994      0.0909   \n",
        "\n",
        "   Dispersija  \n",
-       "0      0.0108  \n",
-       "2      0.1761  \n",
-       "3      0.0015  \n",
-       "4      0.0293  \n",
-       "5      0.0242  "
+       "0      0.0172  \n",
+       "2      0.2083  \n",
+       "3      0.0295  \n",
+       "4      0.1246  \n",
+       "5      0.0264  "
       ],
       "text/html": [
        "<div>\n",
@@ -265,68 +141,68 @@
        "      <th>0</th>\n",
        "      <td>signal_std</td>\n",
        "      <td>0.1368</td>\n",
-       "      <td>0.2366</td>\n",
-       "      <td>0.2621</td>\n",
-       "      <td>0.2836</td>\n",
-       "      <td>0.2921</td>\n",
-       "      <td>0.6743</td>\n",
-       "      <td>0.0108</td>\n",
+       "      <td>0.2404</td>\n",
+       "      <td>0.2670</td>\n",
+       "      <td>0.3048</td>\n",
+       "      <td>0.3601</td>\n",
+       "      <td>0.8259</td>\n",
+       "      <td>0.0172</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>R_val</td>\n",
        "      <td>0.6784</td>\n",
-       "      <td>1.1742</td>\n",
-       "      <td>1.5778</td>\n",
-       "      <td>1.5221</td>\n",
-       "      <td>1.8157</td>\n",
-       "      <td>2.6455</td>\n",
-       "      <td>0.1761</td>\n",
+       "      <td>1.1894</td>\n",
+       "      <td>1.6027</td>\n",
+       "      <td>1.5701</td>\n",
+       "      <td>1.8645</td>\n",
+       "      <td>2.9692</td>\n",
+       "      <td>0.2083</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>RR_r_0/RR_r_1</td>\n",
-       "      <td>0.8250</td>\n",
-       "      <td>0.9750</td>\n",
+       "      <td>0.2873</td>\n",
+       "      <td>0.9722</td>\n",
        "      <td>1.0000</td>\n",
-       "      <td>0.9990</td>\n",
-       "      <td>1.0248</td>\n",
-       "      <td>1.1474</td>\n",
-       "      <td>0.0015</td>\n",
+       "      <td>0.9927</td>\n",
+       "      <td>1.0250</td>\n",
+       "      <td>2.1515</td>\n",
+       "      <td>0.0295</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>P_val</td>\n",
        "      <td>-0.6616</td>\n",
-       "      <td>-0.2604</td>\n",
-       "      <td>-0.1857</td>\n",
-       "      <td>-0.1544</td>\n",
-       "      <td>-0.0789</td>\n",
-       "      <td>0.5061</td>\n",
-       "      <td>0.0293</td>\n",
+       "      <td>-0.2573</td>\n",
+       "      <td>-0.1778</td>\n",
+       "      <td>-0.0965</td>\n",
+       "      <td>-0.0617</td>\n",
+       "      <td>2.2769</td>\n",
+       "      <td>0.1246</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Q_val</td>\n",
-       "      <td>-0.8908</td>\n",
-       "      <td>-0.5358</td>\n",
-       "      <td>-0.4695</td>\n",
-       "      <td>-0.4295</td>\n",
-       "      <td>-0.3042</td>\n",
+       "      <td>-0.9827</td>\n",
+       "      <td>-0.5362</td>\n",
+       "      <td>-0.4612</td>\n",
+       "      <td>-0.4282</td>\n",
+       "      <td>-0.2994</td>\n",
        "      <td>0.0909</td>\n",
-       "      <td>0.0242</td>\n",
+       "      <td>0.0264</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 26
+   "execution_count": 4
   },
   {
    "metadata": {
