--- a/PraleistosReiksmes_Isskirtys.ipynb
+++ b/PraleistosReiksmes_Isskirtys.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-09-28T19:18:37.278104Z",
-     "start_time": "2025-09-28T19:18:36.809826Z"
+     "end_time": "2025-10-13T07:42:33.937789Z",
+     "start_time": "2025-10-13T07:42:32.598460Z"
     }
    },
    "source": [
@@ -24,8 +24,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-28T19:18:37.780524Z",
-     "start_time": "2025-09-28T19:18:37.749605Z"
+     "end_time": "2025-10-13T07:42:38.250639Z",
+     "start_time": "2025-10-13T07:42:38.237501Z"
     }
    },
    "cell_type": "code",
@@ -40,7 +40,16 @@
     "\n"
    ],
    "id": "53ed2f4b75b32c75",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/8m/2mjbvkv91xx273zl_4n42rsr0000gn/T/ipykernel_3399/3769168182.py:3: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  raw_data[raw_data[\"label\"].notna()]\n"
+     ]
+    }
+   ],
    "execution_count": 2
   },
   {
@@ -59,8 +68,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-28T19:18:39.820617Z",
-     "start_time": "2025-09-28T19:18:39.815403Z"
+     "end_time": "2025-10-13T07:42:58.070352Z",
+     "start_time": "2025-10-13T07:42:58.064470Z"
     }
    },
    "cell_type": "code",
@@ -89,8 +98,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-28T19:18:41.675119Z",
-     "start_time": "2025-09-28T19:18:41.669879Z"
+     "end_time": "2025-10-13T07:43:03.172604Z",
+     "start_time": "2025-10-13T07:43:03.166493Z"
     }
    },
    "cell_type": "code",
@@ -120,8 +129,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-28T19:18:43.830889Z",
-     "start_time": "2025-09-28T19:18:43.826109Z"
+     "end_time": "2025-10-13T07:43:09.061499Z",
+     "start_time": "2025-10-13T07:43:09.057178Z"
     }
    },
    "cell_type": "code",
@@ -133,8 +142,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-28T19:19:46.539908Z",
-     "start_time": "2025-09-28T19:19:46.523467Z"
+     "end_time": "2025-10-13T07:43:13.126807Z",
+     "start_time": "2025-10-13T07:43:13.108576Z"
     }
    },
    "cell_type": "code",
