- pridėtas pca algoritmo paaiškinamumo procentas

--- a/pca.ipynb
+++ b/pca.ipynb
@@ -34,8 +34,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-14T16:09:07.950353Z",
-     "start_time": "2025-10-14T16:09:07.694682Z"
+     "end_time": "2025-10-14T19:03:33.094943Z",
+     "start_time": "2025-10-14T19:03:32.832953Z"
     }
    },
    "cell_type": "code",
@@ -88,8 +88,8 @@
     "y_class = df['label'].values\n",
     "y_group = df['outlier'].values\n",
     "\n",
-    "X_pca = PCA(n_components=2).fit_transform(X)\n",
-    "\n",
+    "pca = PCA(n_components=2)\n",
+    "X_pca = pca.fit_transform(X)\n",
     "\n",
     "colors = ['red', 'blue', 'green']\n",
     "class_labels = ['0', '1', '2']\n",
@@ -145,97 +145,97 @@
        "<Figure size 1000x1000 with 0 Axes>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2df3c26ead0>"
+       "<matplotlib.collections.PathCollection at 0x2df471c11d0>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2df3c26ec10>"
+       "<matplotlib.collections.PathCollection at 0x2df471c1310>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2df3c26ed50>"
+       "<matplotlib.collections.PathCollection at 0x2df471c1450>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2df3c26ee90>"
+       "<matplotlib.collections.PathCollection at 0x2df471c1590>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2df3c26efd0>"
+       "<matplotlib.collections.PathCollection at 0x2df471c16d0>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2df3c26f110>"
+       "<matplotlib.collections.PathCollection at 0x2df471c1810>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2df3c26f250>"
+       "<matplotlib.collections.PathCollection at 0x2df471c1950>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2df3c26f390>"
+       "<matplotlib.collections.PathCollection at 0x2df471c1a90>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2df3c26f4d0>"
+       "<matplotlib.collections.PathCollection at 0x2df471c1bd0>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -245,7 +245,7 @@
        "Text(0.5, 1.0, 'PCA vizualizacija: klasės ir išskirtys')"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -255,7 +255,7 @@
        "Text(0.5, 0, 'Pagrindinė komponentė 1')"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -265,17 +265,17 @@
        "Text(0, 0.5, 'Pagrindinė komponentė 2')"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2df3c26f610>"
+       "<matplotlib.legend.Legend at 0x2df471c1d10>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -293,7 +293,28 @@
      }
     }
    ],
-   "execution_count": 114
+   "execution_count": 121
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-14T19:03:37.127035Z",
+     "start_time": "2025-10-14T19:03:37.122374Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(pca.explained_variance_ratio_)\n",
+   "id": "975b4c6d420b7954",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.43861875 0.25985161]\n"
+     ]
+    }
+   ],
+   "execution_count": 122
   }
  ],
  "metadata": {
